--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -4,16 +4,17 @@ on:
   push:
     branches: ["main", "integration"]
     # Optional: only run when site inputs change
-    paths:
-      - ".ruby-version"
-      - "config/**"
-      - "source/**"
-      - "data/**"
-      - "config.rb"
-      - "Gemfile"
-      - "Gemfile.lock"
-      - ".github/workflows/pages.yml"
-
+    # paths:
+    #   - ".ruby-version"
+    #   - "config/**"
+    #   - "source/**"
+    #   - "data/**"
+    #   - "config.rb"
+    #   - "Gemfile"
+    #   - "Gemfile.lock"
+    #   - ".github/workflows/pages.yml"
+    paths-ignore:
+      - "README.md"
 permissions:
   contents: read
   pages: write
@@ -88,7 +89,7 @@ jobs:
         with:
           name: site-build
           path: site
-          
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
