--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -99,4 +99,4 @@ jobs:
 
       - name: Sync to S3
         run: |
-          aws s3 sync site "s3://${{ secrets.S3_BUCKET }}/" --delete
+          aws s3 sync site "s3://${{ secrets.S3_BUCKET }}/integration/" --delete
