--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,18 +1,8 @@
-name: Build & Deploy (Middleman → GitHub Pages)
+name: Build & Deploy (Middleman → GitHub Pages & S3)
 
 on:
   push:
     branches: ["main", "integration"]
-    # Optional: only run when site inputs change
-    # paths:
-    #   - ".ruby-version"
-    #   - "config/**"
-    #   - "source/**"
-    #   - "data/**"
-    #   - "config.rb"
-    #   - "Gemfile"
-    #   - "Gemfile.lock"
-    #   - ".github/workflows/pages.yml"
     paths-ignore:
       - "README.md"
 permissions:
@@ -40,15 +30,15 @@ jobs:
       - name: Build site
         run: bundle exec middleman build --clean
 
-      # - name: Fix CSS absolute asset URLs for subpath hosting
-      #   run: |
-      #     PREFIX="/gcgs-cdp-documentation"
+      - name: Fix CSS absolute asset URLs for subpath hosting
+        run: |
+          PREFIX="/gcgs-cdp-documentation"
 
-      #     # Only CSS url() - handle url("/..."), url('/...'), url(/...)
-      #     find build -type f -name "*.css" -print0 | xargs -0 sed -i \
-      #       -e "s|url(/|url($PREFIX/|g" \
-      #       -e "s|url(\"/|url(\"$PREFIX/|g" \
-      #       -e "s|url('/|url('$PREFIX/|g"
+          # Only CSS url() - handle url("/..."), url('/...'), url(/...)
+          find build -type f -name "*.css" -print0 | xargs -0 sed -i \
+            -e "s|url(/|url($PREFIX/|g" \
+            -e "s|url(\"/|url(\"$PREFIX/|g" \
+            -e "s|url('/|url('$PREFIX/|g"
 
       - name: Upload Pages artifact (main only)
         if: github.ref == 'refs/heads/main'
@@ -56,7 +46,7 @@ jobs:
         with:
           path: build
 
-# ---------------------------------------
+      # ---------------------------------------
       - name: Upload build artifact for S3 (integration only)
         if: github.ref == 'refs/heads/integration'
         uses: actions/upload-artifact@v4
@@ -64,7 +54,7 @@ jobs:
           name: site-build
           path: build
           if-no-files-found: error
-# ---------------------------------------
+  # ---------------------------------------
 
   deploy_pages:
     if: github.ref == 'refs/heads/main'
@@ -78,7 +68,7 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v4
 
-# ---------------------------------------
+  # ---------------------------------------
   deploy_s3:
     if: github.ref == 'refs/heads/integration'
     needs: build
